table background color
https://github.com/ocaml/ocaml/pull/9755#discussion_r483708459

--- a/manual/manual/html_processing/scss/manual.scss
+++ b/manual/manual/html_processing/scss/manual.scss
@@ -193,7 +193,7 @@ nav.toc{
 	border-collapse: collapse;
     }
     td {
-	background:linear-gradient(to left,#fff 0,#ede8e5 100%);
+	background:#f8f7f6;
 	border:1px solid #ccc;
 	padding-left:3px;
 	padding-right:3px;
