add navigation links at bottom of page
https://github.com/ocaml/ocaml/pull/9755#discussion_r483705906

--- a/manual/manual/html_processing/scss/_common.scss
+++ b/manual/manual/html_processing/scss/_common.scss
@@ -152,7 +152,8 @@ html {
     max-width:unset;
     border:none;
     padding:.2em 1em;
-    border-radius:5px
+    border-radius:5px 0;
+    &.brand { border-radius: 0 5px;}
 }
 
 
