--- a/manual/manual/html_processing/scss/manual.scss
+++ b/manual/manual/html_processing/scss/manual.scss
@@ -295,6 +295,9 @@ span.c009{
     background-color:#f3ece6;
     border-radius:6px
 }
+span.authors.c009{
+    background-color:inherit
+}
 span.c013{
     font-weight:700
 }
