start review 9755#discussion_r509348495
=> simplify "update_navigation"
https://github.com/ocaml/ocaml/pull/9755#discussion_r509348495

=> download logo at proper
place (https://github.com/ocaml/ocaml.org/pull/1166#event-3927979984)

=> split pipeline into more functions
https://github.com/ocaml/ocaml.org/pull/1166#event-3927979984

--- a/manual/manual/html_processing/scss/manual.scss
+++ b/manual/manual/html_processing/scss/manual.scss
@@ -191,6 +191,12 @@ h4{
     overflow-x:auto;
     padding-left:1ex
 }
+.ocaml .pre{
+    overflow-x:initial;
+}
+.caml-example .ocaml{
+    overflow-x:auto;
+}
 li code,p code{
     background-color:#f6f8fa;
     color:#0d2b3e;
